tests/paczka2/big_fuzzy/91098221.err
Error in line 7: ogs8Eb S806 67,1
Error in line 3: ipwBBLFBHWD A805 51,7
Error in line 18: l4Ruzmhadq A805 157,6
Error in line 26: YuPu S329 95,9
Error in line 28: YuPu A805 22,7
Error in line 33: ogs8Eb A914 65,1
Error in line 39: A805 A805 29,2
Error in line 48: nIGv4QhNnFM S806 65,9
Error in line 45: A805 A914 36,1
Error in line 72: ogs8Eb A805 10,6
Error in line 75: OdoJzC7webr S329 8,9
Error in line 84: l4Ruzmhadq A914 35,0
Error in line 90: ipwBBLFBHWD A805 13,6
Error in line 95: A805 S806 85,0
Error in line 101: l4Ruzmhadq S329 10,8
Error in line 103: YuPu A805 49,0
Error in line 120: YuPu S806 98,9
Error in line 126: l4Ruzmhadq A805 10,9
Error in line 142: nIGv4QhNnFM S806 65,2
Error in line 153: nIGv4QhNnFM S329 145,7
Error in line 168: nIGv4QhNnFM A914 135,3
Error in line 170: nIGv4QhNnFM A805 2,6
Error in line 175: ogs8Eb S806 81,44
Error in line 184: YuPu S806 93,4
Error in line 183: l4Ruzmhadq S806 22,2
Error in line 195: l4Ruzmhadq S329 99,5
Error in line 204: l4Ruzmhadq A914 76,7
Error in line 206: ogs8Eb A805 0,6
Error in line 208: nIGv4QhNnFM S329 727,4
Error in line 209: ogs8Eb S329 95,7
Error in line 218: ogs8Eb A805 68,4
Error in line 220: A805 S329 28,0
Error in line 234: l4Ruzmhadq A914 39,1
Error in line 236: A805 A805 5,3
Error in line 243: nIGv4QhNnFM A914 22,9
